<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <EditText
        android:layout_marginTop="80dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/et_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_pass"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/input_bg"
        android:hint="Employee ID"
        android:inputType="number"
        android:padding="12dp" />

    <EditText
        android:layout_marginTop="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:background="@drawable/input_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"/>

    <Button
        android:layout_marginTop="32dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_id"
        android:background="@drawable/stroke_bg"
        android:padding="10dp"
        android:text="@string/login"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/tvreport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:padding="12dp"
        android:text="@string/having_issues_report"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic" />

</RelativeLayout>